# Linux-Task-Manager

./: CMakeLists.txt  README.md  taskmgr.desktop
src/: debug.h  ipc_server.cpp  ipc_server.h  main.cpp  proc_parser.cpp  proc_parser.h  systemd_manager.cpp  systemd_manager.h  task_manager.cpp  task_manager.h
